binrw/tests/ui/conflicting_keyword_cond_endian.stderr
error: conflicting endianness keyword
 --> $DIR/conflicting_keyword_cond_endian.rs:6:15
  |
6 |     #[br(big, little, is_big = true, is_little = true)]
  |               ^^^^^^

error: conflicting endianness keyword
 --> $DIR/conflicting_keyword_cond_endian.rs:6:23
  |
6 |     #[br(big, little, is_big = true, is_little = true)]
  |                       ^^^^^^

error: conflicting endianness keyword
 --> $DIR/conflicting_keyword_cond_endian.rs:6:38
  |
6 |     #[br(big, little, is_big = true, is_little = true)]
  |                                      ^^^^^^^^^
